[tool.poetry]
name = "crewflow"
version = "0.1.0"
description = ""
authors = ["Muttakin Islam Hasib <muttakinislamhasib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
